--- a/src/app/view-pdf/view-pdf.component.html
+++ b/src/app/view-pdf/view-pdf.component.html
@@ -1,70 +1,70 @@
-<p>
-  view-pdf works!
-</p>
+<div id="main-wrapper">
 
-<div class="toolbar">
-  <button class="cursor" type="button" title="Cursor" data-tooltype="cursor">➚</button>
+  <div class="toolbar">
+    <button class="cursor" type="button" title="Cursor" data-tooltype="cursor">➚</button>
 
-  <div class="spacer"></div>
+    <div class="spacer"></div>
 
-  <button class="rectangle" type="button" title="Rectangle" data-tooltype="area">&nbsp;</button>
-  <button class="highlight" type="button" title="Highlight" data-tooltype="highlight">&nbsp;</button>
-  <button class="strikeout" type="button" title="Strikeout" data-tooltype="strikeout">&nbsp;</button>
+    <button class="rectangle" type="button" title="Rectangle" data-tooltype="area">&nbsp;</button>
+    <button class="highlight" type="button" title="Highlight" data-tooltype="highlight">&nbsp;</button>
+    <button class="strikeout" type="button" title="Strikeout" data-tooltype="strikeout">&nbsp;</button>
 
-  <div class="spacer"></div>
+    <div class="spacer"></div>
 
-  <button class="text" type="button" title="Text Tool" data-tooltype="text"></button>
-  <select class="text-size"></select>
-  <div class="text-color"></div>
+    <button class="text" type="button" title="Text Tool" data-tooltype="text"></button>
+    <select class="text-size"></select>
+    <div class="text-color"></div>
 
-  <div class="spacer"></div>
+    <div class="spacer"></div>
 
-  <button class="pen" type="button" title="Pen Tool" data-tooltype="draw">✎</button>
-  <select class="pen-size"></select>
-  <div class="pen-color"></div>
+    <button class="pen" type="button" title="Pen Tool" data-tooltype="draw">✎</button>
+    <select class="pen-size"></select>
+    <div class="pen-color"></div>
 
-  <div class="spacer"></div>
+    <div class="spacer"></div>
 
-  <button class="comment" type="button" title="Comment" data-tooltype="point">🗨</button>
+    <!-- <button class="comment" type="button" title="Comment" data-tooltype="point">🗨</button>
 
-  <div class="spacer"></div>
+    <div class="spacer"></div> -->
 
-  <select class="scale">
-    <option value=".5">50%</option>
-    <option value="1">100%</option>
-    <option value="1.33">133%</option>
-    <option value="1.5">150%</option>
-    <option value="2">200%</option>
-  </select>
+    <select class="scale">
+      <option value=".5">50%</option>
+      <option value="1">100%</option>
+      <option value="1.33">133%</option>
+      <option value="1.5">150%</option>
+      <option value="2">200%</option>
+    </select>
 
-  <a href="javascript://" class="rotate-ccw" title="Rotate Counter Clockwise">⟲</a>
-  <a href="javascript://" class="rotate-cw" title="Rotate Clockwise">⟳</a>
+    <a href="javascript://" class="rotate-ccw" title="Rotate Counter Clockwise">⟲</a>
+    <a href="javascript://" class="rotate-cw" title="Rotate Clockwise">⟳</a>
 
-  <div class="spacer"></div>
+    <div class="spacer"></div>
 
-  <a href="javascript://" class="clear" title="Clear">×</a>
+    <a href="javascript://" class="clear" title="Clear">×</a>
 
-  <div class="spacer"></div>
+    <div class="spacer"></div>
 
-  <button id="get-pdf-data-button" (click)="getPdfData($event)">Get PDF data</button>
-  <button id="download-button" (click)="downloadPdf($event)">Download</button>
+    <button id="get-pdf-data-button" (click)="getPdfData($event)">Get PDF data</button>
+    <button id="download-button" (click)="downloadPdf($event)">Download</button>
 
-</div>
-<div id="content-wrapper">
-  <div id="viewer" class="pdfViewer"></div>
-</div>
-<div id="comment-wrapper">
-  <h4>Comments</h4>
-  <div class="comment-list">
-    <div class="comment-list-container">
-      <div class="comment-list-item">No comments</div>
-    </div>
-    <form class="comment-list-form" style="display:none;">
-      <input type="text" placeholder="Add a Comment"/>
-    </form>
   </div>
-</div>
 
-<!-- <script src="../../assets/lib/pdf.js"></script>
-<script src="../../assets/lib/pdf_viewer.js"></script>
-<script src="../../assets/lib/index.js"></script> -->
+  <div id="content-wrapper">
+    <div id="viewer" class="pdfViewer"></div>
+  </div>
+  <!-- <div id="comment-wrapper">
+    <h4>Comments</h4>
+    <div class="comment-list">
+      <div class="comment-list-container">
+        <div class="comment-list-item">No comments</div>
+      </div>
+      <form class="comment-list-form" style="display:none;">
+        <input type="text" placeholder="Add a Comment"/>
+      </form>
+    </div>
+  </div> -->
+
+  <!-- <script src="../../assets/lib/pdf.js"></script>
+  <script src="../../assets/lib/pdf_viewer.js"></script>
+  <script src="../../assets/lib/index.js"></script> -->
+</div>
